Updated v12 sample lists

--- a/configs/datasets/dataset_nanoAODv12.yaml
+++ b/configs/datasets/dataset_nanoAODv12.yaml
@@ -105,7 +105,7 @@ years:
             st_t_top: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/ST_t-channel_top_5f_InclusiveDecays_TuneCP5_13TeV-powheg-pythia8
             st_t_antitop: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/ST_t-channel_antitop_5f_InclusiveDecays_TuneCP5_13TeV-powheg-pythia8
             st_s_lep: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/ST_s-channel_4f_leptonDecays_TuneCP5_13TeV-amcatnlo-pythia8_RunIISummer20UL18NanoAODv9
-            st_s_had: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/ST_s-channel_4f_hadronicDecays_TuneCP5_13TeV-amcatnlo-pythia8
+            ## st_s_had: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/ST_s-channel_4f_hadronicDecays_TuneCP5_13TeV-amcatnlo-pythia8
             tZq_ll: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/tZq_ll_4f_ckm_NLO_TuneCP5_13TeV-amcatnlo-pythia8
             TTWjets_LNu: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/TTWJetsToLNu_TuneCP5_13TeV-amcatnloFXFX-madspin-pythia8
             TTWJets_QQ: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/TTWJetsToQQ_TuneCP5_13TeV-amcatnloFXFX-madspin-pythia8
@@ -121,17 +121,17 @@ years:
             wz_2l2q: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/WZTo2Q2L_mllmin4p0_TuneCP5_13TeV-amcatnloFXFX-pythia8
             wz_1l1nu2q: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/WZTo1L1Nu2Q_4f_TuneCP5_13TeV-amcatnloFXFX-pythia8
             zz: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/ZZ_TuneCP5_13TeV-pythia8
-            zz_2mu2nu: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/ZZTo2Mu2Nu_TuneCP5_DipoleRecoil_13TeV_powheg_pythia8
-            zz_2l2q: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/ZZTo2Q2L_mllmin4p0_TuneCP5_13TeV-amcatnloFXFX-pythia8
-            zz_4l: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/ZZTo4L_TuneCP5_13TeV_powheg_pythia8
-            GluGluContin_ZZ2e2mu: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/GluGluToContinToZZTo2e2mu_TuneCP5_13TeV-mcfm701-pythia8
-            GluGluContin_ZZ2e2nu: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/GluGluToContinToZZTo2e2nu_TuneCP5_13TeV-mcfm701-pythia8
-            GluGluContin_ZZ2e2tau: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/GluGluToContinToZZTo2e2tau_TuneCP5_13TeV-mcfm701-pythia8
-            GluGluContin_ZZ2mu2nu: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/GluGluToContinToZZTo2mu2nu_TuneCP5_13TeV-mcfm701-pythia8
-            GluGluContin_ZZ2mu2tau: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/GluGluToContinToZZTo2mu2tau_TuneCP5_13TeV-mcfm701-pythia8
-            GluGluContin_ZZ4e: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/GluGluToContinToZZTo4e_TuneCP5_13TeV-mcfm701-pythia8
-            GluGluContin_ZZ4mu: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/GluGluToContinToZZTo4mu_TuneCP5_13TeV-mcfm701-pythia8
-            GluGluContin_ZZ4tau: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/GluGluToContinToZZTo4tau_TuneCP5_13TeV-mcfm701-pythia8
+            # zz_2mu2nu: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/ZZTo2Mu2Nu_TuneCP5_DipoleRecoil_13TeV_powheg_pythia8
+            # zz_2l2q: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/ZZTo2Q2L_mllmin4p0_TuneCP5_13TeV-amcatnloFXFX-pythia8
+            # zz_4l: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/ZZTo4L_TuneCP5_13TeV_powheg_pythia8
+            # GluGluContin_ZZ2e2mu: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/GluGluToContinToZZTo2e2mu_TuneCP5_13TeV-mcfm701-pythia8
+            ## GluGluContin_ZZ2e2nu: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/GluGluToContinToZZTo2e2nu_TuneCP5_13TeV-mcfm701-pythia8
+            ## GluGluContin_ZZ2e2tau: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/GluGluToContinToZZTo2e2tau_TuneCP5_13TeV-mcfm701-pythia8
+            # GluGluContin_ZZ2mu2nu: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/GluGluToContinToZZTo2mu2nu_TuneCP5_13TeV-mcfm701-pythia8
+            # GluGluContin_ZZ2mu2tau: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/GluGluToContinToZZTo2mu2tau_TuneCP5_13TeV-mcfm701-pythia8
+            # GluGluContin_ZZ4e: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/GluGluToContinToZZTo4e_TuneCP5_13TeV-mcfm701-pythia8
+            # GluGluContin_ZZ4mu: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/GluGluToContinToZZTo4mu_TuneCP5_13TeV-mcfm701-pythia8
+            # GluGluContin_ZZ4tau: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/UL2018/GluGluToContinToZZTo4tau_TuneCP5_13TeV-mcfm701-pythia8
 
         VVV:
             www: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/WWW_4F_TuneCP5_13TeV-amcatnlo-pythia8
@@ -157,8 +157,8 @@ years:
             data_E: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_v2/UL2017/SingleMuon_Run2017E
             data_F: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_v2/UL2017/SingleMuon_Run2017F
         DY:
-            # dy_M-50: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_v2/UL2017/DYJetsToLL_M-50_TuneCP5_13TeV-amcatnloFXFX-pythia8_RunIISummer20UL17NanoAODv9
-            # dy_M-100To200: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_v2/UL2017/DYJetsToLL_M-100to200_TuneCP5_13TeV-amcatnloFXFX-pythia8
+            # dy_M-50_aMCatNLO: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_v2/UL2017/DYJetsToLL_M-50_TuneCP5_13TeV-amcatnloFXFX-pythia8_RunIISummer20UL17NanoAODv9
+            # dy_M-100To200_aMCatNLO: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_v2/UL2017/DYJetsToLL_M-100to200_TuneCP5_13TeV-amcatnloFXFX-pythia8
             dy_M-50_MiNNLO: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_v2/UL2017/DYJetsToMuMu_M-50_massWgtFix_TuneCP5_13TeV-powhegMiNNLO-pythia8-photos
             dy_M-100To200_MiNNLO: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_v2/UL2017/DYJetsToMuMu_M-100to200_H2ErratumFix_TuneCP5_13TeV-powhegMiNNLO-pythia8-photos
         Top:
@@ -193,8 +193,8 @@ years:
           data_G: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016/UL2016/SingleMuon_Run2016G
           data_H: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016/UL2016/SingleMuon_Run2016H
         DY:
-        #   dy_M-50: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016/UL2016/DYJetsToLL_M-50_TuneCP5_13TeV-amcatnloFXFX-pythia8_RunIISummer20UL16NanoAODv9
-        #   dy_M-100To200: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016/UL2016/DYJetsToLL_M-100to200_TuneCP5_13TeV-amcatnloFXFX-pythia8
+        #   dy_M-50_aMCatNLO: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016/UL2016/DYJetsToLL_M-50_TuneCP5_13TeV-amcatnloFXFX-pythia8_RunIISummer20UL16NanoAODv9
+        #   dy_M-100To200_aMCatNLO: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016/UL2016/DYJetsToLL_M-100to200_TuneCP5_13TeV-amcatnloFXFX-pythia8
           dy_M-50_MiNNLO: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016/UL2016/DYJetsToMuMu_M-50_TuneCP5_13TeV-powhegMiNNLO-pythia8-photos
           dy_M-100To200_MiNNLO: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016/UL2016/DYJetsToMuMu_M-100to200_H2ErratumFix_TuneCP5_13TeV-powhegMiNNLO-pythia8-photos
         Top:
@@ -231,8 +231,8 @@ years:
             data_E: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/SingleMuon_Run2016E
             data_F: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/SingleMuon_Run2016F
         DY:
-            # dy_M-50: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/DYJetsToLL_M-50_TuneCP5_13TeV-amcatnloFXFX-pythia8_RunIISummer20UL16NanoAODAPVv9
-            # dy_M-100To200: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/DYJetsToLL_M-100to200_TuneCP5_13TeV-amcatnloFXFX-pythia8
+            # dy_M-50_aMCatNLO: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/DYJetsToLL_M-50_TuneCP5_13TeV-amcatnloFXFX-pythia8_RunIISummer20UL16NanoAODAPVv9
+            # dy_M-100To200_aMCatNLO: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/DYJetsToLL_M-100to200_TuneCP5_13TeV-amcatnloFXFX-pythia8
             dy_M-50_MiNNLO: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/DYJetsToMuMu_M-50_TuneCP5_13TeV-powhegMiNNLO-pythia8-photos
             dy_M-100To200_MiNNLO: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/DYJetsToMuMu_M-100to200_H2ErratumFix_TuneCP5_13TeV-powhegMiNNLO-pythia8-photos
         Top:
@@ -250,12 +250,13 @@ years:
             zz: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/ZZ_TuneCP5_13TeV-pythia8
         VVV:
             www:
+                - /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/WWW_4F_TuneCP5_13TeV-amcatnlo-pythia8
                 - /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/WWW_4F_TuneCP5_13TeV-amcatnlo-pythia8_RunIISummer20UL16NanoAODAPVv9
-            wwz: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/
-            wzz: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/
-            zzz: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/
+            wwz: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/WWZ_4F_TuneCP5_13TeV-amcatnlo-pythia8
+            wzz: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/WZZ_TuneCP5_13TeV-amcatnlo-pythia8
+            zzz: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/ZZZ_TuneCP5_13TeV-amcatnlo-pythia8
         EWK:
-            ewk_lljj_mll50_mjj120: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/
+            ewk_lljj_mll50_mjj120: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/EWK_LLJJ_MLL-50_MJJ-120_TuneCP5_13TeV-madgraph-pythia8_dipole
         Higgs:
-            ggh_powhegPS: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/
-            vbf_powheg_dipole: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/
+            ggh_powhegPS: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/GluGluHToMuMu_M125_TuneCP5_13TeV-powheg-pythia8
+            vbf_powheg_dipole: /eos/purdue/store/user/rasharma/customNanoAOD_Gautschi_2016APV/UL2016APV/VBFHToMuMu_M125_TuneCP5_withDipoleRecoil_13TeV-powheg-pythia8
