- Fixed stage-2 using @green-cabbage script - Copied DNN score plotter using stage-2 output for VBF from @green-cabbage repo DNN training for the VBF
 #31

--- a/src/lib/histogram/plot_settings_vbfCat_MVA_input.json
+++ b/src/lib/histogram/plot_settings_vbfCat_MVA_input.json
@@ -490,5 +490,13 @@
         "ylabel": "Events / 0.12",
         "xlabel": "$\\mathrm{tanh}^{-1}(DNN~VBF~Score)$",
         "color": "royalblue"
+    },
+    "DNN_score": {
+        "variable": "DNN_score",
+        "binning_linspace": [0, 1.0, 10],
+        "density": false,
+        "ylabel": "Events / 0.1",
+        "xlabel": "DNN VBF Score",
+        "color": "royalblue"
     }
 }
