- Added VBF filter sample to the yaml file - improved run_plotter.py script - in the z-pt reweight code, get_polyFit..py, changed the straight line from horizontal to the y=mx+c. - Updated aMCatNLO z-pt weights - Updated PUJET ID weights

--- a/data/zpt_rewgt/fitting/zpt_rewgt_params_aMCatNLO.yaml
+++ b/data/zpt_rewgt/fitting/zpt_rewgt_params_aMCatNLO.yaml
@@ -1,91 +1,376 @@
 '2018':
   njet_2:
     100:
-      f0_p0: 0.5885484113733955
-      f0_p1: 0.06221612888333331
-      f0_p2: -0.0022510144495437663
+      f0_p0: 0.5714499541804263
+      f0_p1: 0.06196316995226262
+      f0_p2: -0.002205589759453011
       f0_p3: 0.0
       f0_p4: 0.0
       f0_p5: 0.0
-      f0_p0_err: 0.42095205705446914
-      f0_p1_err: 0.12251493264176581
-      f0_p2_err: 0.00723774729964539
+      f0_p0_err: 0.5904498339233919
+      f0_p1_err: 0.17228353482021783
+      f0_p2_err: 0.010191792560959164
       f0_p3_err: 0.0
       f0_p4_err: 0.0
       f0_p5_err: 0.0
-      f1_p0: 1.123901166646949
-      f1_p1: -0.011729396271785354
-      f1_p2: 0.0002289497170226841
-      f1_p3: -1.237826456381844e-06
+      f1_p0: 1.201768642481484
+      f1_p1: -0.018649859617955233
+      f1_p2: 0.000397580175641022
+      f1_p3: -2.4248917679510403e-06
       f1_p4: 0.0
       f1_p5: 0.0
-      f1_p0_err: 1.054360510335889
-      f1_p1_err: 0.066480149497755
-      f1_p2_err: 0.0012762706995737855
-      f1_p3_err: 7.601119307378934e-06
+      f1_p0_err: 1.7618650156318658
+      f1_p1_err: 0.1268860506462476
+      f1_p2_err: 0.002900732491569592
+      f1_p3_err: 2.1169420837292403e-05
       f1_p4_err: 0.0
       f1_p5_err: 0.0
-      horizontal_c0: 1.0152189482172513
+      horizontal_mx: -6.861583600777348e-06
+      horizontal_c0: 1.027400535938331
       polynomial_range:
         xmin1: 17
+        xmax1: 80
+  njet_1:
+    100:
+      f0_p0: 0.6134076284211807
+      f0_p1: 0.06287599528635526
+      f0_p2: -0.0018621386114793179
+      f0_p3: 0.0
+      f0_p4: 0.0
+      f0_p5: 0.0
+      f0_p0_err: 0.6674627298529427
+      f0_p1_err: 0.23771791664390457
+      f0_p2_err: 0.017195749920082146
+      f0_p3_err: 0.0
+      f0_p4_err: 0.0
+      f0_p5_err: 0.0
+      f1_p0: 1.52560275478876
+      f1_p1: -0.04203294824304981
+      f1_p2: 0.0009028122846876684
+      f1_p3: -5.8888535234802505e-06
+      f1_p4: 0.0
+      f1_p5: 0.0
+      f1_p0_err: 1.7082195225115744
+      f1_p1_err: 0.14077316326147926
+      f1_p2_err: 0.0037015965856413316
+      f1_p3_err: 3.109872101031272e-05
+      f1_p4_err: 0.0
+      f1_p5_err: 0.0
+      horizontal_mx: -0.00045212300752838636
+      horizontal_c0: 1.0421563242804068
+      polynomial_range:
+        xmin1: 14
+        xmax1: 70
+  njet_0:
+    100:
+      f0_p0: 0.779150529272134
+      f0_p1: -0.014648474693992886
+      f0_p2: 0.013346986128238198
+      f0_p3: -0.0008160114450238496
+      f0_p4: 0.0
+      f0_p5: 0.0
+      f0_p0_err: 0.9294297146741408
+      f0_p1_err: 0.62821593348283
+      f0_p2_err: 0.12241286754289003
+      f0_p3_err: 0.006898749770527339
+      f0_p4_err: 0.0
+      f0_p5_err: 0.0
+      f1_p0: 1.3965720827509693
+      f1_p1: -0.023391993967575193
+      f1_p2: 0.0004865517198751929
+      f1_p3: -6.523278497422076e-07
+      f1_p4: -1.0529028886574715e-08
+      f1_p5: 0.0
+      f1_p0_err: 1.1780262858582475
+      f1_p1_err: 0.0879018555488355
+      f1_p2_err: 0.002305533145070146
+      f1_p3_err: 2.887946692239753e-05
+      f1_p4_err: 1.3713019537236273e-07
+      f1_p5_err: 0.0
+      horizontal_mx: -0.008859300528542636
+      horizontal_c0: 3.9535839930390573
+      polynomial_range:
+        xmin1: 12
+        xmax1: 120
+'2017':
+  njet_0:
+    100:
+      f0_p0: 0.6967149328477282
+      f0_p1: 0.06526338774970197
+      f0_p2: -0.0022376706245489835
+      f0_p3: 0.0
+      f0_p4: 0.0
+      f0_p5: 0.0
+      f0_p0_err: 0.6856502555669459
+      f0_p1_err: 0.22545838866144327
+      f0_p2_err: 0.015104742808203292
+      f0_p3_err: 0.0
+      f0_p4_err: 0.0
+      f0_p5_err: 0.0
+      f1_p0: 1.3996349763525961
+      f1_p1: -0.019916304053080577
+      f1_p2: 0.00026493340230011056
+      f1_p3: 2.9403625997573654e-06
+      f1_p4: -3.172132429262003e-08
+      f1_p5: 0.0
+      f1_p0_err: 1.6065915871738037
+      f1_p1_err: 0.11447134927812654
+      f1_p2_err: 0.0028674625911673623
+      f1_p3_err: 3.758232263481052e-05
+      f1_p4_err: 2.106224695736769e-07
+      f1_p5_err: 0.0
+      horizontal_mx: 0.00712271239902406
+      horizontal_c0: 0.8223882544100511
+      polynomial_range:
+        xmin1: 15
         xmax1: 100
   njet_1:
     100:
-      f0_p0: 0.6389906409395784
-      f0_p1: 0.05210980912874722
-      f0_p2: -0.0007120493655546334
+      f0_p0: 0.5741124311650538
+      f0_p1: 0.0606137595233003
+      f0_p2: -0.0016656992778185562
       f0_p3: 0.0
       f0_p4: 0.0
       f0_p5: 0.0
-      f0_p0_err: 0.5099928888260563
-      f0_p1_err: 0.21067806925327
-      f0_p2_err: 0.017781430446493236
+      f0_p0_err: 0.6469427621570751
+      f0_p1_err: 0.2313328039644086
+      f0_p2_err: 0.01677784791053156
       f0_p3_err: 0.0
       f0_p4_err: 0.0
       f0_p5_err: 0.0
-      f1_p0: 1.4720288177249348
-      f1_p1: -0.0362048107672743
-      f1_p2: 0.0007304258316706286
-      f1_p3: -4.4137004627143986e-06
+      f1_p0: 1.459621334638697
+      f1_p1: -0.037849919200863814
+      f1_p2: 0.0008154383752951723
+      f1_p3: -5.288614146379874e-06
       f1_p4: 0.0
       f1_p5: 0.0
-      f1_p0_err: 0.940232939704045
-      f1_p1_err: 0.07628130626667161
-      f1_p2_err: 0.0018611188586400997
-      f1_p3_err: 1.3934307273039889e-05
+      f1_p0_err: 1.7039004412361507
+      f1_p1_err: 0.140661140501863
+      f1_p2_err: 0.003702900067059605
+      f1_p3_err: 3.1130523145029766e-05
       f1_p4_err: 0.0
       f1_p5_err: 0.0
-      horizontal_c0: 0.9783543137708731
+      horizontal_mx: -0.000516000483048497
+      horizontal_c0: 1.0397775608904747
       polynomial_range:
-        xmin1: 12
+        xmin1: 14
+        xmax1: 70
+  njet_2:
+    100:
+      f0_p0: 0.5067241248518879
+      f0_p1: 0.06010205815567206
+      f0_p2: -0.0019030117624411049
+      f0_p3: 0.0
+      f0_p4: 0.0
+      f0_p5: 0.0
+      f0_p0_err: 0.5223280786185681
+      f0_p1_err: 0.13091847200532522
+      f0_p2_err: 0.006603352924135338
+      f0_p3_err: 0.0
+      f0_p4_err: 0.0
+      f0_p5_err: 0.0
+      f1_p0: 1.1577969748181154
+      f1_p1: -0.01706511626001768
+      f1_p2: 0.0003728206435374767
+      f1_p3: -2.2688310038594616e-06
+      f1_p4: 0.0
+      f1_p5: 0.0
+      f1_p0_err: 2.0561576322302715
+      f1_p1_err: 0.1383055108691298
+      f1_p2_err: 0.0030191824793126673
+      f1_p3_err: 2.1504499463391845e-05
+      f1_p4_err: 0.0
+      f1_p5_err: 0.0
+      horizontal_mx: -7.126675806655189e-05
+      horizontal_c0: 1.028833217811799
+      polynomial_range:
+        xmin1: 20
         xmax1: 80
+2016postVFP:
   njet_0:
     100:
-      f0_p0: 0.7397919459450077
-      f0_p1: 0.03375313164078138
-      f0_p2: 0.0011516363078290012
+      f0_p0: 0.6834955818711241
+      f0_p1: 0.057877041011043726
+      f0_p2: -0.0018440127932479327
       f0_p3: 0.0
       f0_p4: 0.0
       f0_p5: 0.0
-      f0_p0_err: 0.26440640571778573
-      f0_p1_err: 0.12875075167285796
-      f0_p2_err: 0.012917393396647051
+      f0_p0_err: 0.6979252504846494
+      f0_p1_err: 0.2451738457471799
+      f0_p2_err: 0.017596457932603296
       f0_p3_err: 0.0
       f0_p4_err: 0.0
       f0_p5_err: 0.0
-      f1_p0: 1.3241526330996982
-      f1_p1: -0.018439920771383775
-      f1_p2: 0.0004260805864686387
-      f1_p3: -1.3216205883059685e-06
+      f1_p0: 1.3553625101577478
+      f1_p1: -0.02093831748952027
+      f1_p2: 0.00023645435042669475
+      f1_p3: 4.237244987901006e-06
+      f1_p4: -4.184105341035858e-08
+      f1_p5: 0.0
+      f1_p0_err: 1.6057419833142184
+      f1_p1_err: 0.1216341033623046
+      f1_p2_err: 0.0032526662185341833
+      f1_p3_err: 4.704692659269731e-05
+      f1_p4_err: 2.9933570500383475e-07
+      f1_p5_err: 0.0
+      horizontal_mx: 0.00393163428268813
+      horizontal_c0: 1.2104434599604754
+      polynomial_range:
+        xmin1: 14
+        xmax1: 90
+  njet_1:
+    100:
+      f0_p0: 0.8441531690613605
+      f0_p1: -0.03980623643134881
+      f0_p2: 0.022537118919398746
+      f0_p3: -0.001439563889572465
+      f0_p4: 0.0
+      f0_p5: 0.0
+      f0_p0_err: 1.0626576596909725
+      f0_p1_err: 0.8597125900579031
+      f0_p2_err: 0.2010481548843624
+      f0_p3_err: 0.013628257571691414
+      f0_p4_err: 0.0
+      f0_p5_err: 0.0
+      f1_p0: 1.7561174294431543
+      f1_p1: -0.0506214250324598
+      f1_p2: 0.0009465224696788986
+      f1_p3: -5.521655939998772e-06
       f1_p4: 0.0
       f1_p5: 0.0
-      f1_p0_err: 0.4922444919722029
-      f1_p1_err: 0.04428605056347436
-      f1_p2_err: 0.0011560353815757323
-      f1_p3_err: 8.861620954536437e-06
+      f1_p0_err: 1.2198272254650528
+      f1_p1_err: 0.1056530591265545
+      f1_p2_err: 0.00281824675747944
+      f1_p3_err: 2.3183670220209245e-05
       f1_p4_err: 0.0
       f1_p5_err: 0.0
-      horizontal_c0: 2.498471147943644
+      horizontal_mx: -0.0005180509294574879
+      horizontal_c0: 1.0036375889036802
       polynomial_range:
         xmin1: 10
-        xmax1: 110
+        xmax1: 76
+  njet_2:
+    100:
+      f0_p0: 0.7659947201071574
+      f0_p1: -0.02662663232151668
+      f0_p2: 0.018723525984555213
+      f0_p3: -0.001232583727303907
+      f0_p4: 0.0
+      f0_p5: 0.0
+      f0_p0_err: 1.009996026243636
+      f0_p1_err: 0.8131658070979408
+      f0_p2_err: 0.1900617070816185
+      f0_p3_err: 0.012896571389131108
+      f0_p4_err: 0.0
+      f0_p5_err: 0.0
+      f1_p0: 1.3072969780751533
+      f1_p1: -0.015246148320263818
+      f1_p2: 0.00025912779065761685
+      f1_p3: -1.3168106147111729e-06
+      f1_p4: 0.0
+      f1_p5: 0.0
+      f1_p0_err: 1.0775557553808592
+      f1_p1_err: 0.08711094162023651
+      f1_p2_err: 0.002095438995548785
+      f1_p3_err: 1.522374727961647e-05
+      f1_p4_err: 0.0
+      f1_p5_err: 0.0
+      horizontal_mx: -0.0004256620799039255
+      horizontal_c0: 1.114016589388335
+      polynomial_range:
+        xmin1: 10
+        xmax1: 90
+2016preVFP:
+  njet_0:
+    100:
+      f0_p0: 0.8108044611846869
+      f0_p1: -0.06842819701888396
+      f0_p2: 0.030100086068784542
+      f0_p3: -0.0028859004747457265
+      f0_p4: 8.537242879073322e-05
+      f0_p5: 0.0
+      f0_p0_err: 1.3974637773872576
+      f0_p1_err: 0.7222994510321363
+      f0_p2_err: 0.11423020213796341
+      f0_p3_err: 0.01011036443107204
+      f0_p4_err: 0.00043894843410355897
+      f0_p5_err: 0.0
+      f1_p0: 1.1755415930535693
+      f1_p1: -0.0021283756573792726
+      f1_p2: -0.0002585335247178645
+      f1_p3: 6.046416374323446e-06
+      f1_p4: 0.0
+      f1_p5: 0.0
+      f1_p0_err: 4.287468594728239
+      f1_p1_err: 0.39495903098397017
+      f1_p2_err: 0.013905577545249206
+      f1_p3_err: 0.00018812655426709866
+      f1_p4_err: 0.0
+      f1_p5_err: 0.0
+      horizontal_mx: 0.010510350128719337
+      horizontal_c0: 0.6684387264356094
+      polynomial_range:
+        xmin1: 15
+        xmax1: 40
+  njet_1:
+    100:
+      f0_p0: 0.6067361992584596
+      f0_p1: 0.0603563452377558
+      f0_p2: -0.0012845203864732533
+      f0_p3: 0.0
+      f0_p4: 0.0
+      f0_p5: 0.0
+      f0_p0_err: 1.2092154805725694
+      f0_p1_err: 0.488209810244415
+      f0_p2_err: 0.03950500202770508
+      f0_p3_err: 0.0
+      f0_p4_err: 0.0
+      f0_p5_err: 0.0
+      f1_p0: 1.5949422690521846
+      f1_p1: -0.045709914929380986
+      f1_p2: 0.0009226703314847656
+      f1_p3: -5.664911570359463e-06
+      f1_p4: 0.0
+      f1_p5: 0.0
+      f1_p0_err: 2.0747038278477454
+      f1_p1_err: 0.1707232878722674
+      f1_p2_err: 0.004600949227874779
+      f1_p3_err: 4.035171516119262e-05
+      f1_p4_err: 0.0
+      f1_p5_err: 0.0
+      horizontal_mx: -0.0006141132454143016
+      horizontal_c0: 1.013964291066071
+      polynomial_range:
+        xmin1: 12
+        xmax1: 70
+  njet_2:
+    100:
+      f0_p0: 0.5723500320967215
+      f0_p1: 0.06742645197842365
+      f0_p2: -0.002672849164293308
+      f0_p3: 0.0
+      f0_p4: 0.0
+      f0_p5: 0.0
+      f0_p0_err: 1.0565843718990287
+      f0_p1_err: 0.351781165104151
+      f0_p2_err: 0.023541455769897374
+      f0_p3_err: 0.0
+      f0_p4_err: 0.0
+      f0_p5_err: 0.0
+      f1_p0: 1.1366759579055925
+      f1_p1: -0.012389403392480665
+      f1_p2: 0.00024413026901384403
+      f1_p3: -1.3588174849761878e-06
+      f1_p4: 0.0
+      f1_p5: 0.0
+      f1_p0_err: 1.6468727845359479
+      f1_p1_err: 0.1058110261113528
+      f1_p2_err: 0.002107483169355948
+      f1_p3_err: 1.3111134545006304e-05
+      f1_p4_err: 0.0
+      f1_p5_err: 0.0
+      horizontal_mx: -0.0007820765749200314
+      horizontal_c0: 1.1129460612717308
+      polynomial_range:
+        xmin1: 15
+        xmax1: 105
